<resources>
    <string name="app_name">GasTracker</string>
    <string name="text_string_other_login">Login with other account</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_string_button_sign_in">Sign In</string>
    <string name="button_add_car_text">Add Car</string>
    <string name="button_logout_text">Logout</string>
    <string name="text_box_car_make">Make</string>
    <string name="text_box_car_year">Year</string>
    <string name="text_box_car_model">Model</string>
    <string name="text_box_car_name">Name</string>
    <string name="button_submit_car_text">Add Car</string>
    <string name="button_edit_car_text">Confirm Changes</string>
    <string name="title_activity_view_car_records">ActivityViewCarRecords</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_box_mileage_view_date">Date</string>
    <string name="text_box_mileage_view_mileage">Mileage</string>
    <string name="text_box_mileage_view_gallons">Gallons</string>
    <string name="text_box_mileage_view_full">Full</string>
    <string name="text_box_mileage_view_price">Price</string>
    <string name="text_box_mileage_view_mpg">MPG</string>
    <string name="add_fillup_record_button_text">Add Entry</string>
    <string name="text_box_date">Date</string>
    <string name="text_box_add_fillup_date">Date:</string>
    <string name="text_box_add_fillup_mileage">Mileage:</string>
    <string name="text_box_add_fillup_gallons">Gallons:</string>
    <string name="text_box_add_fillup_full">Full:</string>
    <string name="text_box_add_fillup_price">Price:</string>
    <string name="button_submit_fillup_text">Add Entry</string>
    <string name="edit_text_add_fillup_hint_amount">Gallons</string>
    <string name="edit_text_add_fillup_hint_mileage">Mileage</string>
    <string name="edit_text_add_fillup_hint_price">Price</string>
    <string name="edit_text_edit_fillup_hint_price">Price</string>
    <string name="edit_text_edit_fillup_hint_amount">Amount</string>
    <string name="edit_text_edit_fillup_hint_mileage">Mileage</string>
    <string name="text_box_edit_fillup_price">Price:</string>
    <string name="text_box_edit_fillup_full">Full:</string>
    <string name="text_box_edit_fillup_gallons">Gallons:</string>
    <string name="text_box_edit_fillup_mileage">Mileage:</string>
    <string name="text_box_edit_fillup_date">Date:</string>
    <string name="button_edit_fillup_text">Confirm Changes</string>
    <string name="add_maintenance_record_button_text">Add Record</string>
    <string name="add_trip_record_button_text">Add Trip</string>
    <string name="text_box_maintenance_view_date">Date</string>
    <string name="text_box_maintenance_view_mileage">Mileage</string>
    <string name="text_box_maintenance_view_type">Type</string>
    <string name="text_box_maintenance_view_notes">Notes</string>
    <string name="text_box_trip_view_date">Date</string>
    <string name="text_box_trip_view_start">Start</string>
    <string name="text_box_trip_view_end">End</string>
    <string name="text_box_trip_view_notes">Notes</string>
    <string name="text_box_add_maintenance_date">Date:</string>
    <string name="text_box_add_maintenance_mileage">Mileage:</string>
    <string name="text_box_add_maintenance_type">Type:</string>
    <string name="text_box_add_maintenance_notes">Notes:</string>
    <string name="edit_text_add_maintenance_hint_mileage">Mileage</string>
    <string name="edit_text_add_maintenance_hint_type">Type</string>
    <string name="edit_text_add_maintenance_hint_notes">Notes</string>
    <string name="button_submit_maintenance_text">Add Record</string>
    <string name="button_edit_maintenance_text">Confirm Changes</string>
    <string name="edit_text_edit_maintenance_hint_notes">Notes</string>
    <string name="edit_text_edit_maintenance_hint_type">Type</string>
    <string name="edit_text_edit_maintenance_hint_mileage">Mileage</string>
    <string name="text_box_edit_maintenance_notes">Notes:</string>
    <string name="text_box_edit_maintenance_type">Type:</string>
    <string name="text_box_edit_maintenance_mileage">Mileage:</string>
    <string name="text_box_edit_maintenance_date">Date:</string>
    <string name="button_submit_trip_text">Add Trip</string>
    <string name="edit_text_add_trip_hint_notes">Notes</string>
    <string name="edit_text_add_trip_hint_end">End</string>
    <string name="edit_text_add_trip_hint_mileage">Begin</string>
    <string name="text_box_add_trip_notes">Notes:</string>
    <string name="text_box_add_trip_end">End:</string>
    <string name="text_box_add_trip_mileage">Begin:</string>
    <string name="text_box_add_trip_date">Date:</string>
    <string name="button_edit_trip_text">Confirm Edits</string>
    <string name="edit_text_edit_trip_hint_notes">Notes</string>
    <string name="edit_text_edit_trip_hint_end">End</string>
    <string name="edit_text_edit_trip_hint_mileage">Begin</string>
    <string name="text_box_edit_trip_notes">Notes:</string>
    <string name="text_box_edit_trip_end">End:</string>
    <string name="text_box_edit_trip_mileage">Begin:</string>
    <string name="text_box_edit_trip_date">Date:</string>
    <string name="text_box_trip_view_total">Total</string>
    <string name="text_box_register_email">Email</string>
    <string name="text_box_register_password">Password</string>
    <string name="text_box_register_confirm_password">Confirm Password</string>
    <string name="button_register_user_text">Register</string>
    <string name="edit_text_register_user_email">Email</string>
    <string name="edit_text_register_user_confirm_password">Confirm Password</string>
    <string name="edit_text_register_user_password">Password</string>
</resources>
