<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.twild.gastracker.ActivityViewCarRecords$PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/data_table_header"
        >

        <TextView
            android:text="@string/text_box_mileage_view_date"
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.2" />

        <TextView
            android:text="@string/text_box_mileage_view_mileage"
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.2" />

        <TextView
            android:text="@string/text_box_mileage_view_gallons"
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.2" />

        <TextView
            android:text="@string/text_box_mileage_view_full"
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.1" />

        <TextView
            android:text="@string/text_box_mileage_view_price"
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.18" />

        <TextView
            android:text="@string/text_box_mileage_view_mpg"
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.12" />

    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/data_view_line"
        android:layout_below="@+id/data_table_header"
        android:background="@android:color/darker_gray" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:id="@+id/fillup_list_view"
        android:layout_above="@+id/add_gas_record_button"
        android:layout_below="@+id/section_label" />

    <Button
        android:text="Add Entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/add_gas_record_button"
        android:onClick="addGasRecord" />


</RelativeLayout>
