<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/data_table_header"
        >

        <TextView
            android:text="@string/text_box_maintenance_view_date"
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.2" />

        <TextView
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.2"
            android:text="@string/text_box_maintenance_view_mileage" />

        <TextView
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.2"
            android:text="@string/text_box_maintenance_view_type" />

        <TextView
            android:layout_width="0px"
            android:layout_column="0"
            android:layout_weight="0.4"
            android:text="@string/text_box_maintenance_view_notes" />

    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/data_view_line"
        android:layout_below="@+id/data_table_header"
        android:background="@android:color/darker_gray" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:id="@+id/maintenance_list_view"
        android:layout_above="@+id/button_add_maintenance"
        android:layout_below="@+id/section_label" />

    <Button
        android:id="@+id/button_add_maintenance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/add_maintenance_record_button_text" />

</RelativeLayout>
