<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:layout_weight="0.4">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="225sp"
            android:layout_weight="0.25"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="1.25">

                <TextView
                    android:id="@+id/text_box_add_fillup_date"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical|end"
                    android:paddingRight="7dp"
                    android:text="@string/text_box_add_fillup_date"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                <TextView
                    android:id="@+id/text_box_add_fillup_mileage"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical|end"
                    android:paddingRight="7dp"
                    android:text="@string/text_box_add_fillup_mileage"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                <TextView
                    android:id="@+id/text_box_add_fillup_gallons"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_weight="0.25"
                    android:ems="10"
                    android:gravity="center_vertical|end"
                    android:paddingRight="7dp"
                    android:text="@string/text_box_add_fillup_gallons"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                <TextView
                    android:id="@+id/text_box_add_fillup_full"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical|end"
                    android:paddingRight="7dp"
                    android:text="@string/text_box_add_fillup_full"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                <TextView
                    android:id="@+id/text_box_add_fillup_price"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical|end"
                    android:paddingRight="7dp"
                    android:text="@string/text_box_add_fillup_price"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="1.25">

                <EditText
                    android:id="@+id/edit_text_add_fillup_date"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"
                    android:ems="5"
                    android:focusable="false"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <EditText
                    android:id="@+id/edit_text_add_fillup_mileage"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"
                    android:ems="4"
                    android:hint="@string/edit_text_add_fillup_hint_mileage"
                    android:inputType="numberDecimal"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <EditText
                    android:id="@+id/edit_text_add_fillup_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"
                    android:ems="4"
                    android:hint="@string/edit_text_add_fillup_hint_amount"
                    android:inputType="numberDecimal"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <CheckBox
                    android:id="@+id/checkbox_add_fillup_full"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"
                    android:ems="4"
                    android:text="" />

                <EditText
                    android:id="@+id/edit_text_add_fillup_price"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"
                    android:ems="4"
                    android:hint="@string/edit_text_add_fillup_hint_price"
                    android:inputType="numberDecimal"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:layout_weight="0.4">

            <Button
                android:text="@string/button_submit_fillup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_submit_fillup"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>